syntax = "proto3";

package com.road.yishi.proto.simple;

message FriendSearchNickNameReqMsg {
  string nickName = 1;
}
